# api/v1/restapi/operations/status/add_status_responses.go
@@ -9,8 +9,6 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/runtime"
-
-	models "github.com/statusdev/status/api/v1/models"
 )
 
 // AddStatusOKCode is the HTTP code returned for type AddStatusOK
@@ -21,11 +19,6 @@ const AddStatusOKCode int = 200
 swagger:response addStatusOK
 */
 type AddStatusOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.StatusItem `json:"body,omitempty"`
 }
 
 // NewAddStatusOK creates AddStatusOK with default headers values
@@ -34,27 +27,12 @@ func NewAddStatusOK() *AddStatusOK {
 	return &AddStatusOK{}
 }
 
-// WithPayload adds the payload to the add status o k response
-func (o *AddStatusOK) WithPayload(payload *models.StatusItem) *AddStatusOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the add status o k response
-func (o *AddStatusOK) SetPayload(payload *models.StatusItem) {
-	o.Payload = payload
-}
-
 // WriteResponse to the client
 func (o *AddStatusOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
 	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
 }
 
 // AddStatusUnauthorizedCode is the HTTP code returned for type AddStatusUnauthorized
